--- a/src/styles/CharacterSelect.css
+++ b/src/styles/CharacterSelect.css
@@ -1,3 +1,7 @@
+.character-select-container {
+    margin-top: 10px;
+}
+
 .cards {
     display: flex;
     flex-wrap: wrap;
@@ -10,6 +14,7 @@
     flex: 0 0 100px;
     margin: 10px;
     box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 .card img {
@@ -19,15 +24,44 @@
 .card .text {
     padding: 0 20px 10px;
     font-size: 16px;
+    white-space: nowrap;
+}
+
+.card-img-pulsate {
+    animation: pulse-blue 2s infinite;
+}
+
+.selected-profile-name {
+    font-weight: 900;
+    font-style: italic;
+}
+
+@keyframes pulse-blue {
+    0% {
+        transform: scale(0.90);
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0.7);
+    }
+    
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
+    }
+    
+    100% {
+        transform: scale(0.90);
+        box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
+    }
 }
 
 .search {
     background: transparent;
     border: none;
     outline: none;
-    font-size: 45px;
+    font-size: 1.7em;
     color: white;
     font-weight: bold;
     text-align: center;
-    font-family: 'Helvetica', 'Segoe UI Symbol'
+    width: 300px;
+    margin-block-start: 0.6em;
+    margin-block-end: 0.6em;
 }
