--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,49 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.question-count-intro {
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: bounce-down-from-above;
+  animation-duration: 0.6s;
+  animation-delay: 0.1s;
+}
+
+.question-intro {
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: fade-in;
+  animation-duration: 0.5s;
+  animation-delay: 1.1s;
+}
+
+@keyframes bounce-down-from-above {
+  0% {
+    opacity: .2;
+    transform: translateY(-200px);
+  }
+
+  50% {
+    opacity: .7;
+    transform: translateY(15px);
+  }
+
+  60% {
+    opacity: .7;
+    transform: translateY(12px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
