--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: 'Question Serif';
+  font-style: normal;
+  src: url('../fonts/Chunkfive.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Title Sans';
+  font-style: normal;
+  src: url('../fonts/sacramento.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Answer Sans';
+  font-style: normal;
+  src: url('../fonts/Please write me a song.ttf') format('truetype');
+}
+
 #countdown-bar {
     position: absolute;
     top: 0;
@@ -28,18 +46,6 @@
   }
 }
 
-@font-face {
-  font-family: 'Question Serif';
-  font-style: normal;
-  src: url('../fonts/Chunkfive.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Title Sans';
-  font-style: normal;
-  src: url('../fonts/sacramento.ttf') format('truetype');
-}
-
 .title-text {
   font-family: 'Title Sans';
   font-size: calc(32px + 2vmin);
@@ -65,6 +71,12 @@
   animation-name: fade-in;
   animation-duration: 0.5s;
   animation-delay: 1.1s;
+}
+
+.button.-quiz-answer {
+  color: #202129;
+  font-family: 'Answer Sans';
+  font-size: calc(16px + 2vmin);
 }
 
 @keyframes bounce-down-from-above {
