--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -79,6 +79,13 @@
   font-size: calc(16px + 2vmin);
 }
 
+.button.-quiz-answer.-intro {
+  transform: scale(0, 0);
+  animation-fill-mode: forwards;
+  animation-name: pop-in;
+  animation-duration: 0.5s;
+}
+
 @keyframes bounce-down-from-above {
   0% {
     opacity: .2;
@@ -105,6 +112,18 @@
     opacity: 0;
   }
   100% {
+    opacity: 1;
+  }
+}
+
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+  }
+
+  100% {
+    transform: scale(1, 1);
     opacity: 1;
   }
 }
