--- a/src/styles/CharacterSelect.css
+++ b/src/styles/CharacterSelect.css
@@ -3,8 +3,10 @@
 }
 
 .text {
-    font-size: 16px;
+    font-size: 20px;
     white-space: nowrap;
+    font-family: 'Koverwatch';
+    font-style: italic;
 }
 
 .card-img-pulsate {
@@ -16,6 +18,23 @@
     font-style: italic;
 }
 
+@font-face {
+    font-family: 'Koverwatch';
+    font-style: normal;
+    src: url('../fonts/koverwatch.ttf') format('truetype');
+}
+
+h1 {
+    font-family: 'Koverwatch';
+    font-style: italic;
+    color: greenyellow;
+}
+
+h2 {
+    font-family: 'Koverwatch';
+    font-style: italic;
+}
+
 @keyframes pulse-blue {
     0% {
         transform: scale(0.90);
@@ -23,8 +42,8 @@
     }
     
     70% {
-        transform: scale(1);
-        box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
+        transform: scale(1.0);
+        box-shadow: 0 0 0 20px rgba(52, 172, 224, 0);
     }
     
     100% {
@@ -43,4 +62,6 @@
     text-align: center;
     width: 300px;
     margin-block-end: 0.6em;
+    font-family: 'Koverwatch';
+    font-style: italic;
 }
