clear up some warnings

--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -77,6 +77,8 @@
   color: #202129;
   font-family: 'Answer Sans';
   font-size: calc(16px + 2vmin);
+  border-radius: 0px;
+  border: calc(1px + 0.1vmin) solid #000;
 }
 
 .button.-quiz-answer.-intro {
