--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -107,8 +107,21 @@
 }
 
 .results-profile-thumbnail {
-  max-width: 50%;
-  max-height: 50%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.profile-grid-row {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.profile-grid-item {
+    flex-basis: 16.6%;
+    padding: 1px;
+    position: relative;
+    box-sizing: border-box;
 }
 
 @keyframes bounce-down-from-above {
@@ -151,4 +164,22 @@
     transform: scale(1, 1);
     opacity: 1;
   }
+}
+
+@media(max-width: 768px) {
+    .profile-grid-item {
+        flex-basis: 20%;
+    }
+}
+
+@media(max-width: 425px) {
+    .profile-grid-item {
+        flex-basis: 25%;
+    }
+}
+
+@media(max-width: 375px) {
+    .profile-grid-item {
+        flex-basis: 33.33%;
+    }
 }
