--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -101,6 +101,22 @@
   animation-duration: 0.5s;
 }
 
+.button.-quiz-answer.-intro.-seq0 {
+  animation-delay: 0.1s;
+}
+
+.button.-quiz-answer.-intro.-seq1 {
+  animation-delay: 0.3s;
+}
+
+.button.-quiz-answer.-intro.-seq2 {
+  animation-delay: 0.5s;
+}
+
+.button.-quiz-answer.-intro.-seq3 {
+  animation-delay: 0.7s;
+}
+
 .results-question-text {
   font-family: 'Question Serif';
   font-size: calc(10px + 1.5vmin);
@@ -109,6 +125,14 @@
 .results-profile-thumbnail {
   max-width: 100%;
   max-height: 100%;
+}
+
+.grid-row.-intro {
+  max-height: 0;
+  overflow: hidden;
+  animation-fill-mode: forwards;
+  animation-name: pop-in-container;
+  animation-duration: 0.7s;
 }
 
 .profile-grid-row {
@@ -165,6 +189,17 @@
     opacity: 1;
   }
 }
+
+@keyframes pop-in-container {
+  0% {
+    max-height: 0;
+  }
+
+  100% {
+    max-height: 1000px;
+  }
+}
+
 
 @media(max-width: 768px) {
     .profile-grid-item {
