--- a/src/styles/CharacterSelect.css
+++ b/src/styles/CharacterSelect.css
@@ -35,6 +35,12 @@ h2 {
     font-style: italic;
 }
 
+.profile-img { 
+    padding: 2px;
+    border: 2px solid rgba(52, 172, 224, 0.6);
+    background-color: black;
+}
+
 @keyframes pulse-blue {
     0% {
         transform: scale(0.90);
