--- a/src/styles/Buttons.css
+++ b/src/styles/Buttons.css
@@ -6,7 +6,7 @@
     user-select: none;
     transition: all 150ms linear;
     text-align: center;
-    white-space: nowrap;
+    white-space: normal;
     text-decoration: none !important;
     text-transform: none;
     text-transform: capitalize;
