--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -93,6 +93,7 @@
   border-radius: 0px;
   border: calc(1px + 0.1vmin) solid #000;
   background-color: #fff;
+  text-transform: none;
 }
 
 .button.-quiz-answer.-intro {
