--- a/src/styles/Buttons.css
+++ b/src/styles/Buttons.css
@@ -34,5 +34,5 @@
 
 .button.-selected {
     color: var(--color-snow);
-    background: var(--color-grass);
+    background-color: var(--color-grass);
 }
