--- a/src/styles/Splash.css
+++ b/src/styles/Splash.css
@@ -19,31 +19,131 @@
 #do-you-know {
   font-family: 'Basic Serif';
   display: block;
-}
-
-#and {
-  font-family: 'Basic Serif';
-  font-size: calc(8px + 2vmin);
-  display: inline-block;
-}
-
-#carl {
-  font-family: 'Carl Sans';
-  color: var(--color-ocean);
-  display: inline-block;
-  transform: rotate(3deg);
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: bounce-down-from-above;
+  animation-duration: 0.6s;
 }
 
 #sophia {
   font-family: 'Sophia Sans';
   color: var(--color-salmon);
   display: inline-block;
-  transform: rotate(-3deg);
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: fly-in-from-left;
+  animation-duration: 0.3s;
+  animation-delay: 0.6s;
+}
+
+#and {
+  font-family: 'Basic Serif';
+  font-size: calc(8px + 2vmin);
+  display: inline-block;
+  transform: scale(0, 0);
+  animation-fill-mode: forwards;
+  animation-name: pop-in;
+  animation-duration: 0.5s;
+  animation-delay: 0.9s;
+}
+
+#carl {
+  font-family: 'Carl Sans';
+  color: var(--color-ocean);
+  display: inline-block;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: fly-in-from-right;
+  animation-duration: 0.3s;
+  animation-delay: 1.4s;
 }
 
 #question-mark {
+  display: inline-block;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: bounce-up-from-below;
+  animation-duration: 0.6s;
+  animation-delay: 1.7s;
 }
 
 .splash {
   text-shadow: 2px 2px #161616;
+}
+
+/* copied from Quiz.css; can't be arsed to reuse */
+@keyframes pop-in {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+  }
+
+  100% {
+    transform: scale(1, 1);
+    opacity: 1;
+  }
+}
+
+@keyframes bounce-down-from-above {
+  0% {
+    opacity: .2;
+    transform: translateY(-200px);
+  }
+
+  50% {
+    opacity: .7;
+    transform: translateY(15px);
+  }
+
+  60% {
+    opacity: .7;
+    transform: translateY(12px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fly-in-from-left {
+  0% {
+    opacity: .2;
+    transform: translateX(-200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) rotate(-3deg);
+  }
+}
+
+@keyframes fly-in-from-right {
+  0% {
+    opacity: .2;
+    transform: translateX(200px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) rotate(3deg);
+  }
+}
+
+@keyframes bounce-up-from-below {
+  0% {
+    opacity: .2;
+    transform: translateY(200px);
+  }
+
+  50% {
+    opacity: .7;
+    transform: translateY(-15px);
+  }
+
+  60% {
+    opacity: .7;
+    transform: translateY(-12px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
