change ready to 'waiting for other players...'
this is more indicative of what is happening. Otherwise I keep wanting
to click on Ready which deselects the character I have selected

--- a/src/styles/CharacterSelect.css
+++ b/src/styles/CharacterSelect.css
@@ -27,7 +27,7 @@
 .character-select-container h1 {
     font-family: 'Koverwatch';
     font-style: italic;
-    color: greenyellow;
+    text-shadow: 2px 2px #161616;
 }
 
 .character-select-container h2 {
